bridge/base/rugby-app-expose.yaml
#! rugby-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: rugby-app
    namespace: rugby
    labels:
        com.docker.compose.project: rugby
        com.docker.compose.service: rugby-app
spec:
    selector:
        com.docker.compose.project: rugby
        com.docker.compose.service: rugby-app
    ports:
        - name: rugby-app-3000
          port: 3000
          targetPort: rugby-app-3000
